src/org/netbeans/modules/php/nette/languages/neon/CCNeonParser.java
/* Generated By:JavaCC: Do not edit this line. CCNeonParser.java */
package org.netbeans.modules.php.nette.languages.neon;

import java.util.*;

public class CCNeonParser implements CCNeonParserConstants {
        public List<ParseException> syntaxErrors = new ArrayList<ParseException> ();

        void recover(ParseException ex, int recoveryPoint) {
                syntaxErrors.add(ex);
                Token t;

                do {
                        t = getNextToken ();
                } while (t.kind != EOF && t.kind != recoveryPoint);
        }

  final public void Start() throws ParseException {
    try {
      label_1:
      while (true) {
        if (jj_2_1(3)) {
          ;
        } else {
          break label_1;
        }
        jj_consume_token(EMPTY_LINE);
      }
      label_2:
      while (true) {
        if (jj_2_2(3)) {
          ;
        } else {
          break label_2;
        }
        if (jj_2_3(3)) {
          BlockArray();
        } else if (jj_2_4(3)) {
          BlockHash();
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      label_3:
      while (true) {
        if (jj_2_5(3)) {
          ;
        } else {
          break label_3;
        }
        jj_consume_token(EMPTY_LINE);
      }
      jj_consume_token(0);
    } catch (ParseException ex) {
                recover(ex, EOL);
    }
  }

  final public void BlockArray() throws ParseException {
    try {
      label_4:
      while (true) {
        if (jj_2_6(3)) {
          ;
        } else {
          break label_4;
        }
        jj_consume_token(EMPTY_LINE);
      }
      BlockArrayEntry();
      label_5:
      while (true) {
        if (jj_2_7(3)) {
          ;
        } else {
          break label_5;
        }
        jj_consume_token(EOL);
        label_6:
        while (true) {
          if (jj_2_8(3)) {
            ;
          } else {
            break label_6;
          }
          jj_consume_token(EMPTY_LINE);
        }
        BlockArrayEntry();
      }
      label_7:
      while (true) {
        if (jj_2_9(3)) {
          ;
        } else {
          break label_7;
        }
        jj_consume_token(EMPTY_LINE);
      }
    } catch (ParseException ex) {
                recover(ex, EOL);
    }
  }

  final public void BlockArrayEntry() throws ParseException {
    try {
      if (jj_2_20(3)) {
        label_8:
        while (true) {
          if (jj_2_10(3)) {
            ;
          } else {
            break label_8;
          }
          jj_consume_token(EMPTY_LINE);
        }
        if (jj_2_11(3)) {
          jj_consume_token(SPACE);
        } else {
          ;
        }
        jj_consume_token(DASH);
        if (jj_2_12(3)) {
          jj_consume_token(SPACE);
        } else {
          ;
        }
        jj_consume_token(EOL);
        label_9:
        while (true) {
          if (jj_2_13(3)) {
            ;
          } else {
            break label_9;
          }
          jj_consume_token(EMPTY_LINE);
        }
        if (jj_2_14(3)) {
          BlockHash();
        } else if (jj_2_15(3)) {
          BlockArray();
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
      } else if (jj_2_21(3)) {
        if (jj_2_16(3)) {
          jj_consume_token(SPACE);
        } else {
          ;
        }
        jj_consume_token(DASH);
        if (jj_2_17(3)) {
          jj_consume_token(SPACE);
        } else {
          ;
        }
        Value();
        if (jj_2_18(3)) {
          jj_consume_token(SPACE);
        } else {
          ;
        }
        label_10:
        while (true) {
          if (jj_2_19(3)) {
            ;
          } else {
            break label_10;
          }
          jj_consume_token(EMPTY_LINE);
        }
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (ParseException ex) {
                recover(ex, EOL);
    }
  }

  final public void BlockHash() throws ParseException {
    try {
      label_11:
      while (true) {
        if (jj_2_22(3)) {
          ;
        } else {
          break label_11;
        }
        jj_consume_token(EMPTY_LINE);
      }
      BlockHashEntry();
      label_12:
      while (true) {
        if (jj_2_23(3)) {
          ;
        } else {
          break label_12;
        }
        jj_consume_token(EOL);
        label_13:
        while (true) {
          if (jj_2_24(3)) {
            ;
          } else {
            break label_13;
          }
          jj_consume_token(EMPTY_LINE);
        }
        BlockHashEntry();
      }
      label_14:
      while (true) {
        if (jj_2_25(3)) {
          ;
        } else {
          break label_14;
        }
        jj_consume_token(EMPTY_LINE);
      }
    } catch (ParseException ex) {
                recover(ex, EOL);
    }
  }

  final public void BlockHashEntry() throws ParseException {
    try {
      label_15:
      while (true) {
        if (jj_2_26(3)) {
          ;
        } else {
          break label_15;
        }
        jj_consume_token(EMPTY_LINE);
      }
      if (jj_2_31(3)) {
        Key();
        jj_consume_token(COLON);
        if (jj_2_27(3)) {
          jj_consume_token(SPACE);
        } else {
          ;
        }
      } else if (jj_2_32(3)) {
        Key();
        if (jj_2_28(3)) {
          jj_consume_token(SPACE);
        } else {
          ;
        }
        jj_consume_token(COLON);
        if (jj_2_29(3)) {
          jj_consume_token(SPACE);
        } else {
          ;
        }
        Value();
        if (jj_2_30(3)) {
          jj_consume_token(SPACE);
        } else {
          ;
        }
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(EOL);
      label_16:
      while (true) {
        if (jj_2_33(3)) {
          ;
        } else {
          break label_16;
        }
        jj_consume_token(EMPTY_LINE);
      }
      if (jj_2_34(3)) {
        BlockHash();
      } else if (jj_2_35(3)) {
        BlockArray();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      label_17:
      while (true) {
        if (jj_2_36(3)) {
          ;
        } else {
          break label_17;
        }
        jj_consume_token(EMPTY_LINE);
      }
    } catch (ParseException ex) {
                recover(ex, EOL);
    }
  }

  final public void Value() throws ParseException {
    try {
      if (jj_2_37(3)) {
        jj_consume_token(KEYWORD);
      } else if (jj_2_38(3)) {
        jj_consume_token(NUMBER);
      } else if (jj_2_39(3)) {
        jj_consume_token(VARIABLE);
      } else if (jj_2_40(3)) {
        jj_consume_token(STRING);
      } else if (jj_2_41(3)) {
        jj_consume_token(LITERAL);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (ParseException ex) {
                recover(ex, EOL);
    }
  }

  final public void Key() throws ParseException {
    try {
      if (jj_2_42(3)) {
        jj_consume_token(NUMBER);
      } else if (jj_2_43(3)) {
        jj_consume_token(STRING);
      } else if (jj_2_44(3)) {
        jj_consume_token(LITERAL);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      if (jj_2_50(3)) {
        if (jj_2_45(3)) {
          jj_consume_token(SPACE);
        } else {
          ;
        }
        jj_consume_token(EXTENDS);
        if (jj_2_46(3)) {
          jj_consume_token(SPACE);
        } else {
          ;
        }
        if (jj_2_47(3)) {
          jj_consume_token(NUMBER);
        } else if (jj_2_48(3)) {
          jj_consume_token(STRING);
        } else if (jj_2_49(3)) {
          jj_consume_token(LITERAL);
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
      } else {
        ;
      }
    } catch (ParseException ex) {
                recover(ex, EOL);
    }
  }

  private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  private boolean jj_2_10(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  private boolean jj_2_11(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  private boolean jj_2_12(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_12(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  private boolean jj_2_13(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_13(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  private boolean jj_2_14(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_14(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  private boolean jj_2_15(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_15(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  private boolean jj_2_16(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_16(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  private boolean jj_2_17(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_17(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  private boolean jj_2_18(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_18(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }

  private boolean jj_2_19(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_19(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(18, xla); }
  }

  private boolean jj_2_20(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_20(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(19, xla); }
  }

  private boolean jj_2_21(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_21(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(20, xla); }
  }

  private boolean jj_2_22(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_22(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(21, xla); }
  }

  private boolean jj_2_23(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_23(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(22, xla); }
  }

  private boolean jj_2_24(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_24(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(23, xla); }
  }

  private boolean jj_2_25(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_25(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(24, xla); }
  }

  private boolean jj_2_26(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_26(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(25, xla); }
  }

  private boolean jj_2_27(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_27(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(26, xla); }
  }

  private boolean jj_2_28(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_28(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(27, xla); }
  }

  private boolean jj_2_29(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_29(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(28, xla); }
  }

  private boolean jj_2_30(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_30(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(29, xla); }
  }

  private boolean jj_2_31(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_31(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(30, xla); }
  }

  private boolean jj_2_32(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_32(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(31, xla); }
  }

  private boolean jj_2_33(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_33(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(32, xla); }
  }

  private boolean jj_2_34(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_34(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(33, xla); }
  }

  private boolean jj_2_35(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_35(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(34, xla); }
  }

  private boolean jj_2_36(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_36(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(35, xla); }
  }

  private boolean jj_2_37(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_37(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(36, xla); }
  }

  private boolean jj_2_38(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_38(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(37, xla); }
  }

  private boolean jj_2_39(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_39(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(38, xla); }
  }

  private boolean jj_2_40(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_40(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(39, xla); }
  }

  private boolean jj_2_41(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_41(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(40, xla); }
  }

  private boolean jj_2_42(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_42(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(41, xla); }
  }

  private boolean jj_2_43(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_43(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(42, xla); }
  }

  private boolean jj_2_44(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_44(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(43, xla); }
  }

  private boolean jj_2_45(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_45(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(44, xla); }
  }

  private boolean jj_2_46(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_46(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(45, xla); }
  }

  private boolean jj_2_47(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_47(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(46, xla); }
  }

  private boolean jj_2_48(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_48(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(47, xla); }
  }

  private boolean jj_2_49(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_49(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(48, xla); }
  }

  private boolean jj_2_50(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_50(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(49, xla); }
  }

  private boolean jj_3_30() {
    if (jj_scan_token(SPACE)) return true;
    return false;
  }

  private boolean jj_3_6() {
    if (jj_scan_token(EMPTY_LINE)) return true;
    return false;
  }

  private boolean jj_3_35() {
    if (jj_3R_18()) return true;
    return false;
  }

  private boolean jj_3_29() {
    if (jj_scan_token(SPACE)) return true;
    return false;
  }

  private boolean jj_3_34() {
    if (jj_3R_19()) return true;
    return false;
  }

  private boolean jj_3_28() {
    if (jj_scan_token(SPACE)) return true;
    return false;
  }

  private boolean jj_3R_21() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_37()) {
    jj_scanpos = xsp;
    if (jj_3_38()) {
    jj_scanpos = xsp;
    if (jj_3_39()) {
    jj_scanpos = xsp;
    if (jj_3_40()) {
    jj_scanpos = xsp;
    if (jj_3_41()) return true;
    }
    }
    }
    }
    return false;
  }

  private boolean jj_3_36() {
    if (jj_scan_token(EMPTY_LINE)) return true;
    return false;
  }

  private boolean jj_3_4() {
    if (jj_3R_19()) return true;
    return false;
  }

  private boolean jj_3_2() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_3()) {
    jj_scanpos = xsp;
    if (jj_3_4()) return true;
    }
    return false;
  }

  private boolean jj_3_3() {
    if (jj_3R_18()) return true;
    return false;
  }

  private boolean jj_3_27() {
    if (jj_scan_token(SPACE)) return true;
    return false;
  }

  private boolean jj_3R_18() {
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3_6()) { jj_scanpos = xsp; break; }
    }
    if (jj_3R_20()) return true;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3_7()) { jj_scanpos = xsp; break; }
    }
    while (true) {
      xsp = jj_scanpos;
      if (jj_3_9()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  private boolean jj_3_5() {
    if (jj_scan_token(EMPTY_LINE)) return true;
    return false;
  }

  private boolean jj_3_33() {
    if (jj_scan_token(EMPTY_LINE)) return true;
    return false;
  }

  private boolean jj_3_32() {
    if (jj_3R_23()) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_28()) jj_scanpos = xsp;
    if (jj_scan_token(COLON)) return true;
    xsp = jj_scanpos;
    if (jj_3_29()) jj_scanpos = xsp;
    if (jj_3R_21()) return true;
    return false;
  }

  private boolean jj_3_1() {
    if (jj_scan_token(EMPTY_LINE)) return true;
    return false;
  }

  private boolean jj_3_31() {
    if (jj_3R_23()) return true;
    if (jj_scan_token(COLON)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_27()) jj_scanpos = xsp;
    return false;
  }

  private boolean jj_3_26() {
    if (jj_scan_token(EMPTY_LINE)) return true;
    return false;
  }

  private boolean jj_3_24() {
    if (jj_scan_token(EMPTY_LINE)) return true;
    return false;
  }

  private boolean jj_3_23() {
    if (jj_scan_token(EOL)) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3_24()) { jj_scanpos = xsp; break; }
    }
    if (jj_3R_22()) return true;
    return false;
  }

  private boolean jj_3R_22() {
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3_26()) { jj_scanpos = xsp; break; }
    }
    xsp = jj_scanpos;
    if (jj_3_31()) {
    jj_scanpos = xsp;
    if (jj_3_32()) return true;
    }
    if (jj_scan_token(EOL)) return true;
    return false;
  }

  private boolean jj_3_49() {
    if (jj_scan_token(LITERAL)) return true;
    return false;
  }

  private boolean jj_3_25() {
    if (jj_scan_token(EMPTY_LINE)) return true;
    return false;
  }

  private boolean jj_3_48() {
    if (jj_scan_token(STRING)) return true;
    return false;
  }

  private boolean jj_3_47() {
    if (jj_scan_token(NUMBER)) return true;
    return false;
  }

  private boolean jj_3_22() {
    if (jj_scan_token(EMPTY_LINE)) return true;
    return false;
  }

  private boolean jj_3_18() {
    if (jj_scan_token(SPACE)) return true;
    return false;
  }

  private boolean jj_3_46() {
    if (jj_scan_token(SPACE)) return true;
    return false;
  }

  private boolean jj_3_17() {
    if (jj_scan_token(SPACE)) return true;
    return false;
  }

  private boolean jj_3_15() {
    if (jj_3R_18()) return true;
    return false;
  }

  private boolean jj_3_45() {
    if (jj_scan_token(SPACE)) return true;
    return false;
  }

  private boolean jj_3_16() {
    if (jj_scan_token(SPACE)) return true;
    return false;
  }

  private boolean jj_3_14() {
    if (jj_3R_19()) return true;
    return false;
  }

  private boolean jj_3_50() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_45()) jj_scanpos = xsp;
    if (jj_scan_token(EXTENDS)) return true;
    xsp = jj_scanpos;
    if (jj_3_46()) jj_scanpos = xsp;
    xsp = jj_scanpos;
    if (jj_3_47()) {
    jj_scanpos = xsp;
    if (jj_3_48()) {
    jj_scanpos = xsp;
    if (jj_3_49()) return true;
    }
    }
    return false;
  }

  private boolean jj_3R_19() {
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3_22()) { jj_scanpos = xsp; break; }
    }
    if (jj_3R_22()) return true;
    return false;
  }

  private boolean jj_3_19() {
    if (jj_scan_token(EMPTY_LINE)) return true;
    return false;
  }

  private boolean jj_3_44() {
    if (jj_scan_token(LITERAL)) return true;
    return false;
  }

  private boolean jj_3_43() {
    if (jj_scan_token(STRING)) return true;
    return false;
  }

  private boolean jj_3_42() {
    if (jj_scan_token(NUMBER)) return true;
    return false;
  }

  private boolean jj_3_13() {
    if (jj_scan_token(EMPTY_LINE)) return true;
    return false;
  }

  private boolean jj_3_21() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_16()) jj_scanpos = xsp;
    if (jj_scan_token(DASH)) return true;
    xsp = jj_scanpos;
    if (jj_3_17()) jj_scanpos = xsp;
    if (jj_3R_21()) return true;
    xsp = jj_scanpos;
    if (jj_3_18()) jj_scanpos = xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3_19()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  private boolean jj_3_12() {
    if (jj_scan_token(SPACE)) return true;
    return false;
  }

  private boolean jj_3_11() {
    if (jj_scan_token(SPACE)) return true;
    return false;
  }

  private boolean jj_3_41() {
    if (jj_scan_token(LITERAL)) return true;
    return false;
  }

  private boolean jj_3_40() {
    if (jj_scan_token(STRING)) return true;
    return false;
  }

  private boolean jj_3_10() {
    if (jj_scan_token(EMPTY_LINE)) return true;
    return false;
  }

  private boolean jj_3_39() {
    if (jj_scan_token(VARIABLE)) return true;
    return false;
  }

  private boolean jj_3_20() {
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3_10()) { jj_scanpos = xsp; break; }
    }
    xsp = jj_scanpos;
    if (jj_3_11()) jj_scanpos = xsp;
    if (jj_scan_token(DASH)) return true;
    xsp = jj_scanpos;
    if (jj_3_12()) jj_scanpos = xsp;
    if (jj_scan_token(EOL)) return true;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3_13()) { jj_scanpos = xsp; break; }
    }
    xsp = jj_scanpos;
    if (jj_3_14()) {
    jj_scanpos = xsp;
    if (jj_3_15()) return true;
    }
    return false;
  }

  private boolean jj_3R_23() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_42()) {
    jj_scanpos = xsp;
    if (jj_3_43()) {
    jj_scanpos = xsp;
    if (jj_3_44()) return true;
    }
    }
    xsp = jj_scanpos;
    if (jj_3_50()) jj_scanpos = xsp;
    return false;
  }

  private boolean jj_3_38() {
    if (jj_scan_token(NUMBER)) return true;
    return false;
  }

  private boolean jj_3_37() {
    if (jj_scan_token(KEYWORD)) return true;
    return false;
  }

  private boolean jj_3_8() {
    if (jj_scan_token(EMPTY_LINE)) return true;
    return false;
  }

  private boolean jj_3_7() {
    if (jj_scan_token(EOL)) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3_8()) { jj_scanpos = xsp; break; }
    }
    if (jj_3R_20()) return true;
    return false;
  }

  private boolean jj_3R_20() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_20()) {
    jj_scanpos = xsp;
    if (jj_3_21()) return true;
    }
    return false;
  }

  private boolean jj_3_9() {
    if (jj_scan_token(EMPTY_LINE)) return true;
    return false;
  }

  /** Generated Token Manager. */
  public CCNeonParserTokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private Token jj_scanpos, jj_lastpos;
  private int jj_la;
  private int jj_gen;
  final private int[] jj_la1 = new int[0];
  static private int[] jj_la1_0;
  static {
      jj_la1_init_0();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {};
   }
  final private JJCalls[] jj_2_rtns = new JJCalls[50];
  private boolean jj_rescan = false;
  private int jj_gc = 0;
